# pak

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint
cmake/: Qt5Helpers.cmake  Versioning.cmake
src/: CMakeLists.txt
src/editor/: CMakeLists.txt  aboutDialog.cxx  aboutDialog.hxx  application.cxx  application.hxx  browser.cxx  browser.hxx  main.cxx  mainWindow.cxx  mainWindow.hxx  pragmas.hxx
src/editor/qresources/: resources.qrc
src/editor/qresources/qdarkstyle/: style.qrc
src/editor/qresources/ui/: about.ui
src/pak_lib/: CMakeLists.txt  pak_file.cxx
src/pak_lib/includes/pak_lib/: pak_file.hxx
src/resources/: resources.hxx  version.rc.in  version_info.hxx.in
src/tools/: CMakeLists.txt
src/tools/pak_extract/: CMakeLists.txt  main.cxx
src/tools/pak_make/: CMakeLists.txt  main.cxx
src/tools/pak_test/: CMakeLists.txt  main.cxx
